# turtlebot3-automation

./: .gitignore  README.md  package.xml  readme  requirements.txt  turtlebot_automation.py
config/: automation_config.yaml
docs/: README.md  REFLECTION.md  api_reference.md  developer_guide.md  examples.md  installation_guide.md  troubleshooting.md  user_manual.md
launch/: full_automation.launch.py
modules/: __init__.py  maintenance_automation.py  navigation_automation.py  object_detection.py  setup_automation.py  voice_control.py
scripts/: install_dependencies.sh
